infra/k3s_migration/gitops/infra/base/ingress/gitlab-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: gitlab-ingress
#  namespace: infra-tools
#  annotations:
#    # 明確指定使用 web (8000 port)
#    traefik.ingress.kubernetes.io/router.entrypoints: web
#spec:
#  ingressClassName: traefik
#  rules:
#  - host: gitlab.k3s.local
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: gitlab-infra-webservice-default
#            port:
#              number: 8181

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ingress
  namespace: infra-tools
spec:
  entryPoints:
    - web
#    - websecure
  routes:
  - match: Host(`gitlab.k3s.local`)
    kind: Rule
    services:
    - name: gitlab-infra-webservice-default
      port: 8181
